...
                    android:text="Mood History"
                    android:textColor="@color/text_colour"
                    android:fontFamily="@font/kanit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                <ImageButton
                    android:id="@+id/filterButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="8dp"
                    android:src="@drawable/filter_icon"
                    app:tint="@color/text_colour"/>
...

            <TextView
                android:id="@+id/filter1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Last Week" />

            <TextView
                android:id="@+id/filter2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="By Mood" />

            <TextView
                android:id="@+id/filter3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="By Reason" />

            <TextView
                android:id="@+id/clearFilters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Clear All Filters" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <!-- FloatingActionButton to navigate to Mood Analytics -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
...
        app:tint="@color/text_colour"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_view" />

    <!-- FAB for adding new mood -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/TopHeaderBackground"
        app:tint="@color/text_colour"
...
